google-cloud added

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,13 @@
-# Set this to `azure`
-OPENAI_API_TYPE=
-# The API version you want to use: set this to `2023-05-15` for the released version.
-OPENAI_API_VERSION=
+# Set this to azure
+OPENAI_API_TYPE=azure
+# The API version you want to use: set this to 2023-05-15 for the released version.
+OPENAI_API_VERSION=2023-05-15
 # The base URL for your Azure OpenAI resource.  You can find this in the Azure portal under your Azure OpenAI resource.
-OPENAI_API_BASE=
+OPENAI_API_BASE=https://genai-core-dev.openai.azure.com
+# https://genai-core-dev.openai.azure.com/openai/models?api-version=2023-05-15
 # The API key for your Azure OpenAI resource.  You can find this in the Azure portal under your Azure OpenAI resource.
-OPENAI_API_KEY=
+OPENAI_API_KEY=a7168f3ef2d5469cbbecd84bf3213078
+# The API key for your Azure OpenAI resource. 
+GENERATIVE_LANGUAGE _API_KEY=AIzaSyCL1cMW6u-yFPfFjjECiKlhfpf-vJx6MFI
+
+gen-lang-client-0420148215
