--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,9 @@ python-dotenv
 bs4
 pysqlite3-binary
 tiktoken
+black
+google-cloud-aiplatform>=1.35.0
+google-api-python-client
+google-auth-httplib2
+google-auth-oauthlib
+google-generativeai
