--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 langchain
 openai
-chromadb
+chromadb==0.3.29
 langchainhub
 python-dotenv
 bs4
@@ -12,3 +12,7 @@ google-api-python-client
 google-auth-httplib2
 google-auth-oauthlib
 google-generativeai
+unstructured
+# pdf2image
+# pdfminer
+pypdf
